# teivax

./: .env.schema  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile.toml  README.md  SECURITY.md  index.html
.cargo/: config.toml
.github/: release.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: dockerized.yml  playground.yml  release.yml
.qlty/: qlty.toml
examples/: check_arknights.rs  check_azurlane.rs  check_bleach.rs  check_bluearchive.rs  check_danbooru_sex.rs  check_fgo.rs  check_genshin.rs  check_genshin_danbooru.rs  check_girls_frontline.rs  check_honkai_impact.rs  check_honkai_starrail.rs  check_league_of_legends.rs  check_naruto.rs  check_nikke.rs  check_one_piece.rs  check_persona.rs  check_uma_musume.rs  check_vtubers.rs  check_wuthering_waves.rs  check_zenless.rs
json/: ai_sex.json  arknights.json  azurlane.json  bleach.json  blocklists.json  bluearchive.json  danbooru_sex.json  data_gif.json  data_gif_nsfw.json  fgo.json  genshin.json  genshin_danbooru.json  gif_sex.json  girls_frontline.json  global_anime_girls.json  hentai_yandere.json  honkai_impact.json  honkai_starrail.json  league_of_legends.json  naruto.json  nikke.json  one_piece.json  persona.json  uma_musume.json  vtubers.json  wuthering_waves.json  zenless_zone_zero.json
src/: check_util.rs  data.rs  env.rs  handlers.rs  main.rs  metrics.rs
src/data/: ai_sex.rs  arknights.rs  azurlane.rs  bleach.rs  blocklists.rs  bluearchive.rs  danbooru_sex.rs  data_gif.rs  data_gif_nsfw.rs  fgo.rs  genshin.rs  genshin_danbooru.rs  (+15 more)
